--- a/index.html
+++ b/index.html
@@ -14,6 +14,45 @@
 
 <body>
 
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">LOGO</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">JEUX</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  PROMOS
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">promos 1</a></li>
+                  <li><a class="dropdown-item" href="#">promos 2</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">PANIER</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Rechercher</button>
+            </form>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item ">
+                <a class="nav-link">PROFIL</a>
+              </li>
+              </ul>
+          </div>
+        </div>
+      </nav>
 <!--navbar-->
 
 <!--carroussel promos-->
@@ -22,6 +61,8 @@
 
 
 <footer>
+
+<!--cgu; mentions légales; contact-->
 
 </footer>
 
