--- a/index.html
+++ b/index.html
@@ -2,71 +2,133 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="css/style.css">
-    <title>Let'sPlay</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Let'sPlay</title>
 
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="img/logo-lesplay.png"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">JEUX</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  PROMOS
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">promos 1</a></li>
-                  <li><a class="dropdown-item" href="#">promos 2</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link">PANIER</a>
-              </li>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="img/logo-lesplay.png"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              JEUX
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Jeux de dés</a></li>
+              <li><a class="dropdown-item" href="#">Jeux de cartes</a></li>
+              <li><a class="dropdown-item" href="#">Jeux de plateaux</a></li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Rechercher</button>
-            </form>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item ">
-                <a class="nav-link">PROFIL</a>
-              </li>
-              </ul>
-          </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              PROMOS
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">promos 1</a></li>
+              <li><a class="dropdown-item" href="#">promos 2</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link">PANIER</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
+          <button class="btn" type="submit">Rechercher</button>
+        </form>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              PROFIL
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Enregistrement</a></li>
+              <li><a class="dropdown-item" href="#">Connexion</a></li>
+              <li><a class="dropdown-item" href="#">Mon compte</a></li>
+              <li><a class="dropdown-item" href="#">Mes commandes</a></li>
+              <li><a class="dropdown-item" href="#">Liste de souhaits</a></li>
+              <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
+
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
+        <div class="carousel-caption d-none d-md-block">
+          <p class="offre">Offre de bienvenue</p>
+          <p><a class="btn btn-lg btn-primary mb-4" href="#">Enregistrement</a></p>
         </div>
-      </nav>
+      </div>
 
-<!--carroussel promos-->
+      <div class="flex carousel-item">
+        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="offre">
+        <div class="carousel-caption d-none d-md-block">
+          <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix. </p>
+        </div>
+      </div>
 
-<!--bloc des 3 catégorie-->
+      <div class="carousel-item">
+        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="npuveautés">
+        <div class="carousel-caption d-none d-md-block">
+          <p>Retrouvez nos nouveautés</p>
+        </div>
 
-<footer>
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
-<!--cgu; mentions légales; contact-->
+  <!--carroussel promos-->
 
-</footer>
+  <!--bloc des 3 catégorie-->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+  <footer>
+
+    <!--cgu; mentions légales; contact-->
+
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
