changement image catégorie des

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <div>
   <div class="card" style="width: 18rem;">
-    <img src="img/dés-edumoov.jpeg" class="card-img-top" alt="jeuxdedés">
+    <img src="img/dice-442544_640.jpg" class="card-img-top" alt="jeuxdedés">
     <div class="card-body">
       <p class="card-text">Jeux de dés</p>
     </div>
