--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </button>
   </div>
 
-  <div>
+  <div class="categories d-flex">
   <div class="card" style="width: 18rem;">
     <img src="img/dice-442544_640.jpg" class="card-img-top" alt="jeuxdedés">
     <div class="card-body">
