--- a/jeux-de-plateau.html
+++ b/jeux-de-plateau.html
@@ -80,118 +80,123 @@
         </div>
     </nav>
 
+    <main>
+        <section class="container">
 
-    <section class="container">
+
+            <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p class="offre">Offre de bienvenue</p>
+                            <p><a class="btn btn-lg btn-primary mb-4" href="#">Enregistrement</a></p>
+                        </div>
+                    </div>
+
+                    <div class="flex carousel-item">
+                        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="offre">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix. </p>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="npuveautés">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>Retrouvez nos nouveautés</p>
+                        </div>
+
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
 
 
-        <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
-
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
-                    <div class="carousel-caption d-none d-md-block">
-                        <p class="offre">Offre de bienvenue</p>
-                        <p><a class="btn btn-lg btn-primary mb-4" href="#">Enregistrement</a></p>
+            <div class="text-center mt-5">
+                <h2>Jeux de plateaux</h2>
+            </div>
+            <div class="listcard1 text-center row justify-content-evenly mt-4">
+                <div class="card border-4" style="width: 18rem;">
+                    <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+                    <div class="card-body">
+                        <h5 class="card-title text-white">7wonders</h5>
+                        <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
+                            à 7
+                            joueurs | 30 minutes</p>
+                        <a href="#" class="btn bg-white text-dark">Voir Plus</a>
                     </div>
                 </div>
 
-                <div class="flex carousel-item">
-                    <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="offre">
-                    <div class="carousel-caption d-none d-md-block">
-                        <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix. </p>
+
+                <div class="card border-4" style="width: 18rem;">
+                    <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+                    <div class="card-body">
+                        <h5 class="card-title text-white">7wonders</h5>
+                        <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
+                            à 7
+                            joueurs | 30 minutes</p>
+                        <a href="#" class="btn bg-white text-dark">Voir Plus</a>
                     </div>
                 </div>
 
-                <div class="carousel-item">
-                    <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="npuveautés">
-                    <div class="carousel-caption d-none d-md-block">
-                        <p>Retrouvez nos nouveautés</p>
-                    </div>
 
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
+                <div class="card border-4" style="width: 18rem;">
+                    <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+                    <div class="card-body">
+                        <h5 class="card-title text-white">7wonders</h5>
+                        <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
+                            à 7
+                            joueurs | 30 minutes</p>
+                        <a href="#" class="btn bg-white text-dark">Voir Plus</a>
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
+
+            <div class="listcard2  text-center row justify-content-evenly mt-5">
+                <div class="card border-4" style="width: 18rem;">
+                    <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+                    <div class="card-body">
+                        <h5 class="card-title text-white">7wonders</h5>
+                        <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
+                            à 7
+                            joueurs | 30 minutes</p>
+                        <a href="#" class="btn bg-white text-dark">Voir Plus</a>
+                    </div>
+                </div>
 
 
-        <div class="text-center mt-5">
-            <h2>Jeux de plateaux</h2>
-        </div>
-        <div class="listcard1 text-center row justify-content-evenly mt-4">
-            <div class="card border-4" style="width: 18rem;">
-                <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
-                <div class="card-body">
-                    <h5 class="card-title text-white">7wonders</h5>
-                    <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3 à 7
-                        joueurs | 30 minutes</p>
-                    <a href="#" class="btn bg-white text-dark">Voir Plus</a>
+                <div class="card border-4" style="width: 18rem;">
+                    <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+                    <div class="card-body">
+                        <h5 class="card-title text-white">7wonders</h5>
+                        <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
+                            à 7
+                            joueurs | 30 minutes</p>
+                        <a href="#" class="btn bg-white text-dark">Voir Plus</a>
+                    </div>
                 </div>
             </div>
 
-
-            <div class="card border-4" style="width: 18rem;">
-                <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
-                <div class="card-body">
-                    <h5 class="card-title text-white">7wonders</h5>
-                    <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3 à 7
-                        joueurs | 30 minutes</p>
-                    <a href="#" class="btn bg-white text-dark">Voir Plus</a>
-                </div>
-            </div>
-
-
-            <div class="card border-4" style="width: 18rem;">
-                <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
-                <div class="card-body">
-                    <h5 class="card-title text-white">7wonders</h5>
-                    <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3 à 7
-                        joueurs | 30 minutes</p>
-                    <a href="#" class="btn bg-white text-dark">Voir Plus</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="listcard2  text-center row justify-content-evenly mt-5">
-            <div class="card border-4" style="width: 18rem;">
-                <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
-                <div class="card-body">
-                    <h5 class="card-title text-white">7wonders</h5>
-                    <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
-                        à 7
-                        joueurs | 30 minutes</p>
-                    <a href="#" class="btn bg-white text-dark">Voir Plus</a>
-                </div>
-            </div>
-
-
-            <div class="card border-4" style="width: 18rem;">
-                <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
-                <div class="card-body">
-                    <h5 class="card-title text-white">7wonders</h5>
-                    <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
-                        à 7
-                        joueurs | 30 minutes</p>
-                    <a href="#" class="btn bg-white text-dark">Voir Plus</a>
-                </div>
-            </div>
-        </div>
+    </main>
 
 
 
