--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 PROMOS
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">promos 1</a></li>
-                <li><a class="dropdown-item" href="#">promos 2</a></li>
+                <li><a class="dropdown-item" href="#">Offre de bienvenue</a></li>
+                <li><a class="dropdown-item" href="#">Offres du moment</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -89,13 +89,11 @@
         </div>
       </div>
 
-      <div class="carousel-item">
-        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="moitiéprix">
-        <div class="carousel-caption d-none d-md-block">
-          <p class="moitiéprix">Du 23 septembre au 7 octobre 2023,</p>
-          <p>pour l'achat d'un jeu, le 2ème est à moitié prix. </p>
-        </div>
-      </div>
+        <div class="carousel-item">
+          <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
+            <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+          </div>
+      
 
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
