--- a/Jeux-de-des.html
+++ b/Jeux-de-des.html
@@ -123,9 +123,10 @@
             <img src="img/jeuxdedes/strike.jpeg" class="card-img-top" alt="Image Strike">
             <div class="card-body">
                 <h5 class="card-title text-white">Strike</h5>
-                <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 2
+                <p class="card-text text-white">Jeu d'ambiance | Dès 8 ans | 2
                     à 5
-                    joueurs</p>
+                    joueurs  |  15 min</p>
+                    <p>16€99</p>
                 <a href="#" class="btn bg-white text-dark">Voir Plus</a>
             </div>
         </div>
@@ -135,9 +136,10 @@
             <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image Yatzee">
             <div class="card-body">
                 <h5 class="card-title text-white">Yatzee</h5>
-                <p class="card-text text-white">Nouvelle version 2020 | Jeu de société | À partir de 10 ans | 3
+                <p class="card-text text-white">Jeu de société | À partir de 10 ans | 3
                     à 7
                     joueurs | 30 minutes</p>
+                    <p>16€99</p>
                 <a href="#" class="btn bg-white text-dark">Voir Plus</a>
             </div>
         </div>
@@ -184,10 +186,19 @@
 
 </section>
 
-
-
-
-
+<div class="b-example-divider"></div>
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+      </ul>
+      <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
+    </footer>
+  </div>
 
 
 
