--- a/index.html
+++ b/index.html
@@ -89,64 +89,72 @@
         </div>
       </div>
 
-        <div class="carousel-item">
-          <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
-            <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
-          </div>
-      
+      <div class="carousel-item">
+        <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
+        <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+      </div>
 
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-        </div>
+
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
       </div>
     </div>
+  </div>
 
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
   </div>
 
   <div class="categories d-flex">
-  <div class="card" style="width: 18rem;">
-    <img src="img/dice-442544_640.jpg" class="card-img-top" alt="jeuxdedés">
-    <div class="card-body">
-      <p class="card-text">Jeux de dés</p>
+    <div class="card" style="width: 18rem;">
+      <img src="img/dice-442544_640.jpg" class="card-img-top" alt="jeuxdedés">
+      <div class="card-body">
+        <p class="card-text">Jeux de dés</p>
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <img src="img/pexels-pavel-danilyuk-8111371.jpg" class="card-img-top" alt="jeuxdecartes">
+      <div class="card-body">
+        <p class="card-text">Jeux de cartes</p>
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <img src="img/pexels-cottonbro-studio-4004429.jpg" class="card-img-top" alt="jeuxdeplateaux">
+      <div class="card-body">
+        <p class="card-text">Jeux de plateaux</p>
+      </div>
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
-    <img src="img/pexels-pavel-danilyuk-8111371.jpg" class="card-img-top" alt="jeuxdecartes">
-    <div class="card-body">
-      <p class="card-text">Jeux de cartes</p>
-    </div>
+  <div class="b-example-divider"></div>
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+      </ul>
+      <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
+    </footer>
   </div>
-
-  <div class="card" style="width: 18rem;">
-    <img src="img/pexels-cottonbro-studio-4004429.jpg" class="card-img-top" alt="jeuxdeplateaux">
-    <div class="card-body">
-      <p class="card-text">Jeux de plateaux</p>
-    </div>
-  </div>
-</div>
-
-
-  <footer>
-
-    <!--cgu; mentions légales; contact-->
-
-  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
