--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>Let'sPlay</title>
+  <title>Let's Play</title>
 
 </head>
 
 <body>
 
   <header>
-    <img class="logo" src="img/logo-lesplay.png">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"></a>
+        <a class="navbar-brand" href="#">
+          <img class="logo" src="img/logo-lesplay.png">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -53,26 +54,29 @@
               <a class="nav-link">PANIER</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
-            <button class="btn" type="submit">Rechercher</button>
-          </form>
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                PROFIL
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Enregistrement</a></li>
-                <li><a class="dropdown-item" href="#">Connexion</a></li>
-                <li><a class="dropdown-item" href="#">Mon compte</a></li>
-                <li><a class="dropdown-item" href="#">Mes commandes</a></li>
-                <li><a class="dropdown-item" href="#">Liste de souhaits</a></li>
-                <li><a class="dropdown-item" href="#">Déconnexion</a></li>
-              </ul>
-            </li>
-          </ul>
+          
+          <div class="d-flex">
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
+              <button class="btn" type="submit">Rechercher</button>
+            </form>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  PROFIL
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Enregistrement</a></li>
+                  <li><a class="dropdown-item" href="#">Connexion</a></li>
+                  <li><a class="dropdown-item" href="#">Mon compte</a></li>
+                  <li><a class="dropdown-item" href="#">Mes commandes</a></li>
+                  <li><a class="dropdown-item" href="#">Liste de souhaits</a></li>
+                  <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
