hyperliens et header similiaire toutes pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,50 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
+        <div class="warp" aria-labelledby="warp-label">
+          <span id="warp-label" class="warp__placeholder">
+              Let's Play !
+          </span>
+  
+          <span aria-role="presentation">
+              <span class="warp__0">
+                  L
+              </span>
+              <span class="warp__1">
+                  e
+              </span>
+              <span class="warp__2">
+                  t
+              </span>
+              <span class="warp__3">
+                  '
+              </span>
+              <span class="warp__4">
+                  s
+              </span>
+              <span class="warp__5">
+                   
+              </span>
+              <span class="warp__6">
+                  P
+              </span>
+              <span class="warp__7">
+                  l
+              </span>
+              <span class="warp__8">
+                  a
+              </span>
+              <span class="warp__9">
+                  y
+              </span>
+              <span class="warp__10">
+                   
+              </span>
+              <span class="warp__11">
+                  !
+              </span>
+          </span>
+      </div>
         <a class="navbar-brand" href="#">
           <img class="logo" src="img/logo-lesplay.png">
         </a>
@@ -35,9 +79,9 @@
                 JEUX
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Jeux de dés</a></li>
-                <li><a class="dropdown-item" href="#">Jeux de cartes</a></li>
-                <li><a class="dropdown-item" href="#">Jeux de plateaux</a></li>
+                <li><a href="jeux-de-des.html" target="_blank" class="dropdown-item">Jeux de dés</a></li>
+                <li><a class="dropdown-item" href="jeux-de-cartes.html" target="_blank">Jeux de cartes</a></li>
+                <li><a class="dropdown-item" href="jeux-de-plateau.html" target="_blank">Jeux de plateaux</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -58,7 +102,7 @@
           <div class="d-flex">
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
-              <button class="btn" type="submit">Rechercher</button>
+              <button class="btn2" type="submit">Rechercher</button>
             </form>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
@@ -121,21 +165,21 @@
 
   <div class="categories d-flex">
     <div class="card" style="width: 18rem;">
-      <img src="img/dice-442544_640.jpg" class="card-img-top" alt="jeuxdedés">
+      <a href="jeux-de-des.html" target="_blank"><img src="img/dice-442544_640.jpg" class="card-img-top" alt="jeuxdedés"></a>
       <div class="card-body">
         <p class="card-text">Jeux de dés</p>
       </div>
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="img/pexels-pavel-danilyuk-8111371.jpg" class="card-img-top" alt="jeuxdecartes">
+      <a href="jeux-de-cartes.html" target="_blank"><img src="img/pexels-pavel-danilyuk-8111371.jpg" class="card-img-top" alt="jeuxdecartes"></a>
       <div class="card-body">
         <p class="card-text">Jeux de cartes</p>
       </div>
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="img/pexels-cottonbro-studio-4004429.jpg" class="card-img-top" alt="jeuxdeplateaux">
+      <a href="jeux-de-plateau.html" target="_blank"><img src="img/pexels-cottonbro-studio-4004429.jpg" class="card-img-top" alt="jeuxdeplateaux"></a>
       <div class="card-body">
         <p class="card-text">Jeux de plateaux</p>
       </div>
