--- a/Jeux-de-des.html
+++ b/Jeux-de-des.html
@@ -58,7 +58,7 @@
           <div class="d-flex">
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
-              <button class="btn" type="submit">Rechercher</button>
+              <button class="btn2" type="submit">Rechercher</button>
             </form>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
