page jeu de strike

--- a/Jeux-de-des.html
+++ b/Jeux-de-des.html
@@ -170,7 +170,7 @@
 
     <div class="listcard1 text-center row justify-content-evenly mt-4">
         <div class="card border-4 p-2" style="width: 18rem;">
-            <img src="img/jeuxdedes/strike.jpeg" class="card-img-top" alt="Image Strike">
+          <a href="unjeudedes.html" target="_blank"><img src="img/jeuxdedes/strike.jpeg" class="card-img-top" alt="Image Strike"></a>
             <div class="card-body">
                 <h5 class="card-title text-white">Strike</h5>
                 <p class="card-text text-white">Jeu d'ambiance | Dès 8 ans | 2
