trame page un jeu ok

--- a/jeux-de-plateau.html
+++ b/jeux-de-plateau.html
@@ -230,7 +230,7 @@
 
                             joueurs et plus</p>
                         <p class="card-text text-white fw-bold">31,99€</p>
-                        <a href="#" class="btn3 text-dark">Voir Plus</a>
+                        <a href="#" class="btn  text-dark">Voir Plus</a>
                     </div>
                 </div>
             </div>
