hyperliens et rectif

--- a/jeux-de-cartes.html
+++ b/jeux-de-cartes.html
@@ -170,9 +170,9 @@
 
   <div class="listcard1 text-center row justify-content-evenly mt-4">
     <div class="card border-4 p-2" style="width: 18rem;">
-      <img src="img/jeuxdecartes/dobble1.jpeg" class="card-img-top" alt="Image dobble">
+      <a href="unjeudecarte.html" target="_blank"><img src="img/jeuxdecartes/dobble1.jpeg" class="card-img-top" alt="Image dobble"></a>
       <div class="card-body">
-        <h5 class="card-title text-white">Dobble</h5>
+        </a><h5 class="card-title text-white">Dobble</h5>
         <p class="card-text text-white">Jeu de rapidité | Dès 8 ans | 2 à 8 joueurs | 15 min</p>
         <p>14€99</p>
         <a href="#" class="btn3 text-dark">Voir Plus</a>
