--- a/jeux-de-plateau.html
+++ b/jeux-de-plateau.html
@@ -169,7 +169,7 @@
             </div>
             <div class="listcard1 text-center row justify-content-evenly mt-4">
                 <div class="card border-4 p-2" style="width: 18rem;">
-                    <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
+                  <a href="unjeudeplateau.html" target="_blank"><img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="Image 7wonders">
                     <div class="card-body">
                         <h5 class="card-title text-white">7wonders</h5>
                         <p class="card-text text-white">Jeu de société | À partir de 10 ans | 3
