page descriptif jeu plateau

--- a/unjeudeplateau.html
+++ b/unjeudeplateau.html
@@ -166,58 +166,65 @@
 
 
   <div class="card border-4" style="width: 18rem;">
-    <img src="img/jeuxdedes/strike.jpeg" class="card-img-top" alt="Strike">
+    <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="7Wonders">
     <ul class="images row list-group-flush">
-      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike-espritjeu.jpg" class="card-img-top"
-          alt="Strike"></li>
-      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike3-espritjeu.jpg" class="card-img-top"
-          alt="Strike"></li>
-      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike2-espritjeu.jpg" class="card-img-top"
-          alt="Strike"></li>
+      <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders3-philibert.jpg" class="card-img-top"
+          alt="7Wonders"></li>
+      <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders4-natureetdécouverte.jpg"
+          class="card-img-top" alt="7Wonders"></li>
+      <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders5-natureetdécouverte.jpg"
+          class="card-img-top" alt="7Wonders"></li>
     </ul>
   </div>
 
-  <div class="largeur"><div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title"> Strike</h5>
-      <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
-      <p class="card-text">31 dés | 1 arène |1 tapis en mousse
-        <br>
-        <br>
-        Une arène, une bonne poignée de dés chacun et surtout la volonté d'en gagner plus ! Voici le
-        cocktail explosif que Strike nous propose. Lancez votre dé avec dextérité sur ceux déjà présents dans l'arène.
-        Obtenez au moins deux faces identiques et remportez les dés correspondants. Recommencez autant de fois que vous
-        le souhaitez ! Stop ou encore ? A vous de décider !
-        <br>
-        <br>
-        Mais attention : aucune face identique et vos dés restent dans l'arène, une croix et ils sont éliminés !
-        Remportez tous les dés et le joueur suivant sera obligé de tenter le Grand Lancer ! Qui réussira à rester en
-        lice pour être consacré "Grand vainqueur de l'arène" ?</p>
+  <div class="largeur">
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title"> 7Wonders</h5>
+        <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
+        <p class="card-text">7 plateaux | 155 cartes | 70 pièces | 46 jetons | 1 carnet de score
+          <br>
+          <br>
+          Dans 7 Wonders, vous êtes à la tête de l'une des sept grandes cités du monde antique. Votre but est de faire
+          prospérer votre ville pour la rendre plus influente que celles de vos adversaires. Le futur des cités
+          légendaires comme Babylone, Éphèse ou encore Rhodes dépend de vos talents de gestionnaire. Pour inscrire votre
+          cité dans l'Histoire, vous devrez agir dans différents secteurs de développement. Exploitez les ressources
+          naturelles de vos terres, participez aux progrès scientifiques, développez vos relations commerciales et
+          affirmez votre suprématie militaire. Laissez votre empreinte dans l'histoire des civilisations en bâtissant
+          une merveille monumentale.
+          <br>
+          <br>
+          Une partie se déroule à travers 3 âges successifs comportant chacun 6 tours de jeu. Chaque époque se joue de
+          manière identique et repose sur un système de draft. Chaque joueur choisit une carte de sa main, la joue et
+          passe les cartes restantes au joueur suivant. Ce principe de jeu permet aux différents paquets de cartes de
+          tourner entre les joueurs qui ont donc 6 cartes pour développer au mieux leur stratégie. À chaque tour, les
+          participants ont 3 actions possibles : construire leur cité, développer leur merveille ou gagner de l'argent.
+        </p>
+      </div>
     </div>
-  </div>
 
-   <div class="boutons"><a href="#" class="card-link">Ajouter au panier</a>
-    <a href="#" class="card-link">Ajouter à ma liste de souhaits</a>
-  </div>
-
+    <div class="boutons"><a href="#" class="card-link">Ajouter au panier</a>
+      <a href="#" class="card-link">Ajouter à ma liste de souhaits</a>
+    </div>
 
 
-  <div class="b-example-divider"></div>
-  <div class="container">
-    <footer class="py-3 my-4">
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-      </ul>
-      <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
-    </footer>
-  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+    <div class="b-example-divider"></div>
+    <div class="container">
+      <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+        </ul>
+        <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
+      </footer>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
 
 </body>
 
