--- a/unjeudecarte.html
+++ b/unjeudecarte.html
@@ -166,7 +166,7 @@
 
 
   <div class="card border-4" style="width: 18rem;">
-    <img src="img/jeuxdedes/strike.jpeg" class="card-img-top" alt="Strike">
+    <img src="img/jeuxdecartes/dobble1.jpeg" class="card-img-top" alt="Strike">
     <ul class="images row list-group-flush">
       <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike-espritjeu.jpg" class="card-img-top"
           alt="Strike"></li>
@@ -179,7 +179,7 @@
 
   <div class="largeur"><div class="card" style="width: 18rem;">
     <div class="card-body">
-      <h5 class="card-title"> Strike</h5>
+      <h5 class="card-title"> Dobble</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
       <p class="card-text">31 dés | 1 arène |1 tapis en mousse
         <br>
