--- a/contact.html
+++ b/contact.html
@@ -203,7 +203,7 @@
                     </ul>
 
                     <div class="card" style="width: 18rem;">
-                        <img src="C:\Users\pc\OneDrive\Images\DPD-Embleme-650x366.jpg" class="card-img-top"
+                        <img src="img/DPD-Embleme-650x366.jpg" class="card-img-top"
                             alt="image dpd">
 
                         <div class="card-body">
@@ -213,7 +213,7 @@
 
 
                     <div class="card" style="width: 18rem;">
-                        <img src="C:\Users\pc\OneDrive\Images\collissimo.jpg" class="card-img-top" alt="image dpd">
+                        <img src="img/collissimo.jpg" class="card-img-top" alt="image dpd">
 
                         <div class="card-body">
                             <a href="#" class="card-link text-white"><strong style="font-weight: bold;">Lien Transporteur</strong></a>
@@ -221,7 +221,7 @@
                     </div>
 
                     <div class="card" style="width: 18rem;">
-                        <img src="C:\Users\pc\OneDrive\Images\Apps-Chronopost.jpg" class="card-img-top" alt="image dpd">
+                        <img src="img/Apps-Chronopost.jpg" class="card-img-top" alt="image dpd">
 
                         <div class="card-body">
                             <a href="#" class="card-link text-white"><strong style="font-weight: bold;">Lien Transporteur</strong></a>
