--- a/contact.html
+++ b/contact.html
@@ -203,11 +203,11 @@
                     </ul>
 
                     <div class="card" style="width: 18rem;">
-                        <img src="img/DPD-Embleme-650x366.jpg" class="card-img-top"
-                            alt="image dpd">
+                        <img src="img/DPD-Embleme-650x366.jpg" class="card-img-top" alt="image dpd">
 
                         <div class="card-body">
-                            <a href="#" class="card-link text-white"><strong style="font-weight: bold;">Lien Transporteur</strong></a>
+                            <a href="#" class="card-link text-white"><strong style="font-weight: bold;">Lien
+                                    Transporteur</strong></a>
                         </div>
                     </div>
 
@@ -216,7 +216,8 @@
                         <img src="img/collissimo.jpg" class="card-img-top" alt="image dpd">
 
                         <div class="card-body">
-                            <a href="#" class="card-link text-white"><strong style="font-weight: bold;">Lien Transporteur</strong></a>
+                            <a href="#" class="card-link text-white"><strong style="font-weight: bold;">Lien
+                                    Transporteur</strong></a>
                         </div>
                     </div>
 
@@ -224,7 +225,8 @@
                         <img src="img/Apps-Chronopost.jpg" class="card-img-top" alt="image dpd">
 
                         <div class="card-body">
-                            <a href="#" class="card-link text-white"><strong style="font-weight: bold;">Lien Transporteur</strong></a>
+                            <a href="#" class="card-link text-white"><strong style="font-weight: bold;">Lien
+                                    Transporteur</strong></a>
                         </div>
                     </div>
                 </div>
@@ -245,27 +247,21 @@
 
         </section>
 
-
-
-
-
-
-
-
-
-
-
     </main>
 
 
-
-
-
-
-
-
-
-
+    <div class="b-example-divider"></div>
+    <div class="container">
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+            </ul>
+            <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
+        </footer>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -274,17 +270,6 @@
 </body>
 
 
-<div class="b-example-divider"></div>
-<div class="container">
-    <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        </ul>
-        <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
-    </footer>
-</div>
+
 
 </html>
