Corrections DRY sur index, responsive sur html

--- a/index.html
+++ b/index.html
@@ -163,22 +163,22 @@
   </button>
   </div>
 
-  <div class="categories d-flex">
-    <div class="card" style="width: 18rem;">
+  <div class="categories d-flex row justify-content-center">
+    <div class="card">
       <a href="jeux-de-des.html" target="_blank"><img src="img/dice-442544_640.jpg" class="card-img-top" alt="jeuxdedés"></a>
       <div class="card-body">
         <p class="card-text">Jeux de dés</p>
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <a href="jeux-de-cartes.html" target="_blank"><img src="img/pexels-pavel-danilyuk-8111371.jpg" class="card-img-top" alt="jeuxdecartes"></a>
       <div class="card-body">
         <p class="card-text">Jeux de cartes</p>
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <a href="jeux-de-plateau.html" target="_blank"><img src="img/pexels-cottonbro-studio-4004429.jpg" class="card-img-top" alt="jeuxdeplateaux"></a>
       <div class="card-body">
         <p class="card-text">Jeux de plateaux</p>
