--- a/jeux-de-cartes.html
+++ b/jeux-de-cartes.html
@@ -169,7 +169,7 @@
   </div>
 
   <div class="listcard1 text-center row justify-content-evenly mt-4">
-    <div class="card border-4 p-2" style="width: 18rem;">
+    <div class="card border-4 p-2">
       <a href="unjeudecarte.html" target="_blank"><img src="img/jeuxdecartes/dobble1.jpeg" class="card-img-top" alt="Image dobble"></a>
       <div class="card-body">
         </a><h5 class="card-title text-white">Dobble</h5>
@@ -180,7 +180,7 @@
     </div>
 
 
-    <div class="card border-4 p-2" style="width: 18rem;">
+    <div class="card border-4 p-2">
       <img src="img/jeuxdecartes/loup garou1.jpeg" class="card-img-top" alt="Image Loup garou">
       <div class="card-body">
         <h5 class="card-title text-white">Loup Garou</h5>
@@ -191,7 +191,7 @@
     </div>
 
 
-    <div class="card border-4 p-2" style="width: 18rem;">
+    <div class="card border-4 p-2">
       <img src="img/jeuxdecartes/Uno3.jpg" class="card-img-top" alt="Image uno">
       <div class="card-body">
         <h5 class="card-title text-white">Uno</h5>
@@ -203,7 +203,7 @@
   </div>
 
   <div class="listcard2  text-center row justify-content-evenly mt-5">
-    <div class="card border-4 p-2" style="width: 18rem;">
+    <div class="card border-4 p-2">
       <img src="img/jeuxdecartes/skyjo2.jpeg" class="card-img-top" alt="Image Skyjo">
       <div class="card-body">
         <h5 class="card-title text-white">Skyjo</h5>
@@ -214,7 +214,7 @@
     </div>
 
 
-    <div class="card border-4 p-2" style="width: 18rem;">
+    <div class="card border-4 p-2">
       <img src="img/jeuxdecartes/qui prend1.jpeg" class="card-img-top" alt="Image 6 qui prends">
       <div class="card-body">
         <h5 class="card-title text-white">6 qui prend</h5>
