body fini, maintenant, header a finir. Logo et offcanvas

--- a/unjeudeplateau.html
+++ b/unjeudeplateau.html
@@ -126,105 +126,118 @@
     </nav>
   </header>
 
-  <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
+  <div class="wrap">
+    <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
 
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
-        <div class="carousel-caption d-none d-md-block">
-          <p class="offre">Offre de bienvenue</p>
-          <p class="vingt">20% de réduction sur votre première commande</p>
-          <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
+          <div class="carousel-caption d-none d-md-block">
+            <p class="offre">Offre de bienvenue</p>
+            <p class="vingt">20% de réduction sur votre première commande</p>
+            <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
+          <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+        </div>
+
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        </div>
+      </div>
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+
+    <div class="wrap">
+      <div class="d-flex row justify-content-center">
+
+        <div class="card border-4 col-lg-5">
+          <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top w-50 h-50 mx-auto" alt="7Wonders">
+          <ul class="images row list-group-flush">
+            <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders3-philibert.jpg"
+                class="card-img-top" alt="7Wonders"></li>
+            <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders4-natureetdécouverte.jpg"
+                class="card-img-top" alt="7Wonders"></li>
+            <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders5-natureetdécouverte.jpg"
+                class="card-img-top" alt="7Wonders"></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-5">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title"> 7Wonders</h5>
+              <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
+              <p class="card-text">7 plateaux | 155 cartes | 70 pièces | 46 jetons | 1 carnet de score
+                <br>
+                <br>
+                Dans 7 Wonders, vous êtes à la tête de l'une des sept grandes cités du monde antique. Votre but est de
+                faire
+                prospérer votre ville pour la rendre plus influente que celles de vos adversaires. Le futur des cités
+                légendaires comme Babylone, Éphèse ou encore Rhodes dépend de vos talents de gestionnaire. Pour inscrire
+                votre
+                cité dans l'Histoire, vous devrez agir dans différents secteurs de développement. Exploitez les
+                ressources
+                naturelles de vos terres, participez aux progrès scientifiques, développez vos relations commerciales et
+                affirmez votre suprématie militaire. Laissez votre empreinte dans l'histoire des civilisations en
+                bâtissant
+                une merveille monumentale.
+                <br>
+                <br>
+                Une partie se déroule à travers 3 âges successifs comportant chacun 6 tours de jeu. Chaque époque se
+                joue
+                de
+                manière identique et repose sur un système de draft. Chaque joueur choisit une carte de sa main, la joue
+                et
+                passe les cartes restantes au joueur suivant. Ce principe de jeu permet aux différents paquets de cartes
+                de
+                tourner entre les joueurs qui ont donc 6 cartes pour développer au mieux leur stratégie. À chaque tour,
+                les
+                participants ont 3 actions possibles : construire leur cité, développer leur merveille ou gagner de
+                l'argent.
+              </p>
+            </div>
+          </div>
+
         </div>
       </div>
 
-      <div class="carousel-item">
-        <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
-        <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
-      </div>
-
-
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-      </div>
-    </div>
-  </div>
-
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-  </div>
-
-
-
-  <div class="card border-4" style="width: 18rem;">
-    <img src="img/jeuxdeplateaux/7wonders-philibert.jpg" class="card-img-top" alt="7Wonders">
-    <ul class="images row list-group-flush">
-      <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders3-philibert.jpg" class="card-img-top"
-          alt="7Wonders"></li>
-      <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders4-natureetdécouverte.jpg"
-          class="card-img-top" alt="7Wonders"></li>
-      <li class="list-group-item col m-1"><img src="img/jeuxdeplateaux/7wonders5-natureetdécouverte.jpg"
-          class="card-img-top" alt="7Wonders"></li>
-    </ul>
-  </div>
-
-  <div class="largeur">
-    <div class="card" style="width: 18rem;">
-      <div class="card-body">
-        <h5 class="card-title"> 7Wonders</h5>
-        <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
-        <p class="card-text">7 plateaux | 155 cartes | 70 pièces | 46 jetons | 1 carnet de score
-          <br>
-          <br>
-          Dans 7 Wonders, vous êtes à la tête de l'une des sept grandes cités du monde antique. Votre but est de faire
-          prospérer votre ville pour la rendre plus influente que celles de vos adversaires. Le futur des cités
-          légendaires comme Babylone, Éphèse ou encore Rhodes dépend de vos talents de gestionnaire. Pour inscrire votre
-          cité dans l'Histoire, vous devrez agir dans différents secteurs de développement. Exploitez les ressources
-          naturelles de vos terres, participez aux progrès scientifiques, développez vos relations commerciales et
-          affirmez votre suprématie militaire. Laissez votre empreinte dans l'histoire des civilisations en bâtissant
-          une merveille monumentale.
-          <br>
-          <br>
-          Une partie se déroule à travers 3 âges successifs comportant chacun 6 tours de jeu. Chaque époque se joue de
-          manière identique et repose sur un système de draft. Chaque joueur choisit une carte de sa main, la joue et
-          passe les cartes restantes au joueur suivant. Ce principe de jeu permet aux différents paquets de cartes de
-          tourner entre les joueurs qui ont donc 6 cartes pour développer au mieux leur stratégie. À chaque tour, les
-          participants ont 3 actions possibles : construire leur cité, développer leur merveille ou gagner de l'argent.
-        </p>
-      </div>
-    </div>
-
-    <div class="boutons"><a href="#" class="card-link">Ajouter au panier</a>
+    <div class="d-flex row justify-content-center">
+      <a href="#" class="card-link">Ajouter au panier</a>
       <a href="#" class="card-link">Ajouter à ma liste de souhaits</a>
     </div>
+  </div>
 
+  <div class="b-example-divider"></div>
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+      </ul>
+      <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
+    </footer>
+  </div>
 
-
-    <div class="b-example-divider"></div>
-    <div class="container">
-      <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        </ul>
-        <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
-      </footer>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 
 </body>
 
