--- a/unjeudedes.html
+++ b/unjeudedes.html
@@ -126,86 +126,88 @@
     </nav>
   </header>
 
-  <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
+  <div class="wrap">
+    <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
 
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
-        <div class="carousel-caption d-none d-md-block">
-          <p class="offre">Offre de bienvenue</p>
-          <p class="vingt">20% de réduction sur votre première commande</p>
-          <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
+          <div class="carousel-caption d-none d-md-block">
+            <p class="offre">Offre de bienvenue</p>
+            <p class="vingt">20% de réduction sur votre première commande</p>
+            <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
+          <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+        </div>
+
+
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
         </div>
       </div>
+    </div>
 
-      <div class="carousel-item">
-        <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
-        <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+
+    <div class="wrap">
+    <div class="d-flex row justify-content-center">
+
+      <div class="card border-4 col-lg-5">
+        <img src="img/jeuxdedes/strike.jpeg" class="card-img-top w-50 h-50 mx-auto" alt="Strike">
+        <ul class="images row list-group-flush">
+          <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike-espritjeu.jpg" class="card-img-top"
+              alt="Strike"></li>
+          <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike3-espritjeu.jpg" class="card-img-top"
+              alt="Strike"></li>
+          <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike2-espritjeu.jpg" class="card-img-top"
+              alt="Strike"></li>
+        </ul>
       </div>
 
-
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
+      <div class="card col-lg-5">
+        <div class="card-body">
+          <h5 class="card-title"> Strike</h5>
+          <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
+          <p class="card-text">31 dés | 1 arène |1 tapis en mousse
+            <br>
+            <br>
+            Une arène, une bonne poignée de dés chacun et surtout la volonté d'en gagner plus ! Voici le
+            cocktail explosif que Strike nous propose. Lancez votre dé avec dextérité sur ceux déjà présents dans
+            l'arène.
+            Obtenez au moins deux faces identiques et remportez les dés correspondants. Recommencez autant de fois que
+            vous
+            le souhaitez ! Stop ou encore ? A vous de décider !
+            <br>
+            <br>
+            Mais attention : aucune face identique et vos dés restent dans l'arène, une croix et ils sont éliminés !
+            Remportez tous les dés et le joueur suivant sera obligé de tenter le Grand Lancer ! Qui réussira à rester en
+            lice pour être consacré "Grand vainqueur de l'arène" ?
+          </p>
+        </div>
       </div>
+    </div>
+
+    <div class="d-flex row justify-content-center">
+      <a href="#" class="card-link col-lg-3 text-center">Ajouter au panier</a>
+      <a href="#" class="card-link col-lg-3 text-center">Ajouter à ma liste de souhaits</a>
     </div>
   </div>
 
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
   </div>
-
-
-
-  <div class="d-flex row justify-content-center">
-
-    <div class="card border-4 col-lg-5">
-      <img src="img/jeuxdedes/strike.jpeg" class="card-img-top w-50 h-50 mx-auto" alt="Strike">
-      <ul class="images row list-group-flush">
-        <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike-espritjeu.jpg" class="card-img-top"
-            alt="Strike"></li>
-        <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike3-espritjeu.jpg" class="card-img-top"
-            alt="Strike"></li>
-        <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike2-espritjeu.jpg" class="card-img-top"
-            alt="Strike"></li>
-      </ul>
-    </div>
-
-    <div class="card col-lg-5">
-      <div class="card-body">
-        <h5 class="card-title"> Strike</h5>
-        <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
-        <p class="card-text">31 dés | 1 arène |1 tapis en mousse
-          <br>
-          <br>
-          Une arène, une bonne poignée de dés chacun et surtout la volonté d'en gagner plus ! Voici le
-          cocktail explosif que Strike nous propose. Lancez votre dé avec dextérité sur ceux déjà présents dans l'arène.
-          Obtenez au moins deux faces identiques et remportez les dés correspondants. Recommencez autant de fois que
-          vous
-          le souhaitez ! Stop ou encore ? A vous de décider !
-          <br>
-          <br>
-          Mais attention : aucune face identique et vos dés restent dans l'arène, une croix et ils sont éliminés !
-          Remportez tous les dés et le joueur suivant sera obligé de tenter le Grand Lancer ! Qui réussira à rester en
-          lice pour être consacré "Grand vainqueur de l'arène" ?
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="d-flex row justify-content-center">
-    <a href="#" class="card-link col-lg-3 text-center">Ajouter au panier</a>
-    <a href="#" class="card-link col-lg-3 text-center">Ajouter à ma liste de souhaits</a>
-  </div>
-
   <div class="b-example-divider"></div>
   <div class="container">
     <footer class="py-3 my-4">
